css/Components/cards.css
/* Main section */
.rentals {
  display: flex;
  gap: 48px;
  width: 100%;
  height: fit-content;
  margin-top: 16px;
}

.rounded-grey {
  background-color: #f2f2f2;
  border-radius: 20px;
  padding: 32px;
}

/* Accomodation section */

.accommodation {
  width: 66%;
}

.accommodation > h3 {
  margin-top: 24px;
}

/* Popular section */

.popular {
  width: 33%;
}

.popular-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.popular-title i {
  font-size: 24px;
}

/* Common cards */

.card {
  padding: 4px;
  background-color: white;
  border-radius: 20px;
  box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.1);
}

.rentals a:hover {
  color: #0065fc;
}

.card-body {
  padding: 4%;
}

.card-body p {
  margin: 3% 0;
}

.card-stars {
  font-size: 13px;
}

.blue-star {
  color: #0065fc;
}

.grey-star {
  color: #d8d8d8;
}

/* Cards accomodation */
.cards-grid {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 22px;
  margin: 16px 0;
}

.vertical-card {
  width: 30%;
}

.vertical-img {
  overflow: hidden;
  height: 136px;
}

.vertical-card img {
  border-radius: 20px 20px 0px 0px;
  width: 100%;
  height: inherit;
  object-fit: cover;
  object-position: center;
}

/* Cards popular */
.horizontal-cards a {
  width: 100%;
  display: flex;
}

.horizontal-card {
  width: 100%;
  margin-bottom: 32px;
}

.horizontal-img {
  width: 120px;
  height: 144px;
}

.horizontal-card img {
  border-radius: 20px 0px 0px 20px;
  width: inherit;
  height: inherit;
  object-fit: cover;
}

.horizontal-body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.horizontal-body p {
  margin: 3% 0;
}

/* Tablet */
@media screen and (max-width: 992px) {
  .rentals {
    flex-direction: column-reverse;
    gap: 16px;
  }

  .popular {
    width: 100%;
    background-color: #f2f2f2;
  }

  .accommodation {
    width: 100%;
    background-color: white;
  }

  /* horizontal cards tablet */
  .horizontal-cards {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 32px;
  }

  .horizontal-card {
    width: 30%;
    margin-bottom: 0px;
  }

  .horizontal-card a {
    flex-direction: column;
  }

  .horizontal-img {
    width: inherit;
  }

  .horizontal-card img {
    border-radius: 20px 20px 0px 0px;
    width: 100%;
    height: 136px;
  }
}

/* Mobile */
@media screen and (max-width: 768px) {
  .rounded-grey {
    border-radius: 0px;
    padding: 16px;
  }

  /* horizontal cards mobile */
  .horizontal-cards {
    gap: 32px;
    flex-direction: column;
  }
  .horizontal-card {
    width: 100%;
    margin-bottom: 0px;
  }

  .horizontal-cards a {
    flex-direction: row;
  }

  .horizontal-img {
    width: 140px;
  }

  .horizontal-card img {
    border-radius: 20px 0px 0px 20px;
    width: inherit;
    height: inherit;
  }

  /* vertical cards mobile */

  .cards-grid {
    flex-direction: column;
    gap: 16px;
  }

  .vertical-card {
    width: 100%;
  }
}

